# baller

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: test.yml
docs/: DATABASE_PLAN.md
src/: config.py  exceptions.py  main.py
src/api/: evaluation.py  llm.py  prompt_templates.py  server.py  sports.py  utils.py
src/bot/: client.py  commands.py  content_filter.py  conversation.py  preferences.py
src/bot/intent/: __init__.py  cache.py  context.py  entities.py  processor.py
terraform/: README.md  main.tf  outputs.tf  state.config.example  terraform.tfvars.example  variables.tf
terraform/environments/dev/: main.tf  terraform.tfvars.example
terraform/environments/prod/: main.tf  terraform.tfvars.example
terraform/environments/staging/: main.tf  terraform.tfvars.example
terraform/modules/database/: main.tf  outputs.tf  variables.tf
terraform/modules/search/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_api.py  test_commands.py  test_intent.py  test_llm.py
tests/integration/: test_bot_integration.py
tests/unit/: test_exceptions.py
tests/unit/api/: test_evaluation.py  test_llm.py  test_prompt_templates.py  test_sports.py  test_utils.py
tests/unit/bot/: test_client.py  test_commands.py  test_content_filter.py  test_conversation.py  test_preferences.py
